[package]
name = "cashu-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cashu-crab = "0.3.0"
clap = { version = "4.4.11", features = ["derive"] }
home = "0.5.5"
serde_json = "1.0.108"
sled = "0.34.7"
